--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-handlebars": "~0.6.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-requirejs": "~0.4.1"
   }
 }
